Fix PlayerCard height being too large while streaming

--- a/src/components/PlayerCard/PlayerCard.scss
+++ b/src/components/PlayerCard/PlayerCard.scss
@@ -5,7 +5,7 @@
   align-content: center;
   text-align: center;
   width: 30%;
-  height: 500px;
+  height: 300px;
   background: #ebebeb;
 }
 
